package ice.ice;

public abstract class Co2 {
    protected double co2Gram;

    private double calCo2(){
        double res = 0;
        return res;
    }

    private void userEducation(){

    }

}
